2단계 - 요구 사항 정리 (#790)
* chore: java 16 이후의 문법 사용

* test: 양의 숫자 및 일급 컬렉션에 대한 단위 테스트코드 작성

* docs: 2단계 요구사항 및 키친포스의 요구 사항 정리

* docs: null 대신 다른 단어로 수정

* docs: mermaid 로 표현한 ER 다이어그램 추가

* docs: 리뷰어님의 피드백을 적용하여 요구사항 정리 수정

- mermaid 부분은 "모델링" 부분으로 이동

* docs: 과거시제에서 현재시제로 수정

* docs: 오타 정정